--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,14 @@
 [package]
 name = "p3d"
-version = "0.7.0"
+version = "0.7.1"
 authors = ["mish"]
 edition = "2018"
 
 [build]
 target = "wasm32-unknown-unknown"
+
+[profile.release]
+lto = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -18,3 +21,4 @@ ndarray = { version = "0.15", git = "https://github.com/3Dpass/ndarray", branch 
 peroxide = { version = "0.30", git = "https://github.com/3Dpass/Peroxide", branch = "devel", default-features = false }
 sha2 = { version = "0.10.6", default-features = false }
 base16ct = { version = "0.2.0", default-features = false }
+rayon = "1.5"
